--- a/public/templates/layouts/master.dust
+++ b/public/templates/layouts/master.dust
@@ -12,7 +12,7 @@
         <nav>
             <ul class="nm-np inline">
                 <li><a href="/">Home</a></li>
-                <li><a href="/profile">Profile</a></li>
+                <li><a href="/details">Profile</a></li>
                 <li><a href="/admin">Admin</a></li>
                 <li>
                     {#user}
