--- a/public/templates/login.dust
+++ b/public/templates/login.dust
@@ -29,6 +29,10 @@
                         </td>
                         <td></td>
                     </tr>
+		    <tr>
+		    	<td>
+			    <img src="/img/signup.png" id="signup"/>
+		    </tr>
                 </table>
 
             </fieldset>
