--- a/public/templates/layouts/master.dust
+++ b/public/templates/layouts/master.dust
@@ -4,11 +4,14 @@
     <meta charset="utf-8"/>
     <title>{+title /}</title>
     <link rel="stylesheet" href="css/app.css"/>
+    <script src="js/jquery.js"></script>
+    <script src="js/myJs.js"></script>
 </head>
 <body class="nm-np">
 <header class="grey">
     <div class="wrapper">
-        <h1>Kraken Central</h1>
+        <h1>CHIT FUNDS</h1>
+	<h3> Powered By Paypal </h3>
         <nav>
             <ul class="nm-np inline">
                 <li><a href="/">Home</a></li>
