--- a/public/templates/layouts/master.dust
+++ b/public/templates/layouts/master.dust
@@ -4,8 +4,13 @@
     <meta charset="utf-8"/>
     <title>{+title /}</title>
     <link rel="stylesheet" href="css/app.css"/>
-    <script src="js/jquery.js"></script>
+    <link rel="stylesheet" href="http://code.jquery.com/ui/1.11.2/themes/smoothness/jquery-ui.css">
+    <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
+    <script src="http://code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
+     <script type="text/javascript" src="js/jquery.timepicker.js"></script>
+     <link rel="stylesheet" type="text/css" href="css/jquery.timepicker.css" />
     <script src="js/myJs.js"></script>
+    <!--<script language="JavaScript" src="http://scripts.hashemian.com/js/countdown.js"></script>-->
 </head>
 <body class="nm-np">
 <header class="grey">
@@ -15,8 +20,8 @@
         <nav>
             <ul class="nm-np inline">
                 <li><a href="/">Home</a></li>
-                <li><a href="/details">Profile</a></li>
-                <li><a href="/admin">Admin</a></li>
+                <li><a href="/details">Details</a></li>
+                <li><a href="/admin">Auction</a></li>
                 <li>
                     {#user}
                          <a href="/logout">Logout</a>
@@ -32,6 +37,7 @@
 <div class="wrapper">
     {+body /}
 </div>
-<div id="tentacle"></div>
+<!--<div id="tentacle"></div>-->
+    <script src="js/countdown.js"></script>
 </body>
 </html>
