--- a/public/templates/layouts/master.dust
+++ b/public/templates/layouts/master.dust
@@ -38,6 +38,6 @@
     {+body /}
 </div>
 <!--<div id="tentacle"></div>-->
-    <script src="js/countdown.js"></script>
+    <!--<script src="js/countdown.js"></script>-->
 </body>
 </html>
