--- a/public/templates/table.dust
+++ b/public/templates/table.dust
@@ -22,10 +22,18 @@ table, td ,th{
 {/if}
 
 {@if cond="'{user.type}' == 'subscriber'"}
+<div id="updateBid" style="display:none">
 <form action="/update_bid" method="post">
 <h5> Hi {name} Please enter a Higher bid NOW ! </h5>
 <input type="text" name="bid_amount" value="" /></br></br>
 <input type="submit" id="submit" value="submit" />
 </form>
+</div>
+<div id="sendMoney">
+	<form method="post" action="/sendmoney1">
+	<input type="submit" id="sendMoney" value="Send Money"/>
+	</form>
+</div>
 {/if}
+
 {/body}
